--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,14 @@
                     </execution>
                 </executions>
             </plugin>
+	      <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+            </plugin>
 	    <plugin>
                 <groupId>br.com.softplan.security.zap</groupId>
                 <artifactId>zap-maven-plugin</artifactId>
