--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>sonar_test</groupId>
   <artifactId>com.sonar.maven</artifactId>
-  <version>0.0.3-SNAPSHOT</version>
+  <version>0.0.3-snapshot</version>
   <packaging>jar</packaging>
 
   <name>com.sonar.maven</name>
@@ -16,7 +16,7 @@
     <maven.compiler.target>1.7</maven.compiler.target>
     <sonar.host.url>http://34.69.103.139:9000</sonar.host.url>
     <sonar.login>admin</sonar.login>
-    <sonar.password>admin123</sonar.password>
+    <sonar.password>admin</sonar.password>
     <!-- JaCoCo Properties -->
     <jacoco.version>0.8.6</jacoco.version>
     <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
@@ -59,7 +59,7 @@
     </snapshotRepository>
     <repository>
       <id>nexus</id>
-      <url>http://34.93.219.117:8081/nexus/content/repositories/releases</url>
+      <url>http://34.93.219.117:8081/repository/maven-snapshots/</url>
     </repository>
   </distributionManagement>
   
