--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 
   <groupId>sonar_test</groupId>
   <artifactId>com.sonar.maven</artifactId>
-   <version>0.0.3-SNAPSHOT</version> 
-	 <!-- <version>1.0</version> -->
+   <!-- <version>0.0.3-SNAPSHOT</version> -->
+	  <version>1.0</version> 
   <packaging>jar</packaging>
 
   <name>com.sonar.maven</name>
@@ -60,8 +60,8 @@
     </snapshotRepository>
     <repository>
       <id>nexus</id>
-        <url>http://34.93.219.117:8081/repository/maven-snapshots/</url> 
-	    <!-- <url>http://34.93.219.117:8081/repository/maven-releases/</url> -->
+       <!-- <url>http://34.93.219.117:8081/repository/maven-snapshots/</url> -->
+	     <url>http://34.93.219.117:8081/repository/maven-releases/</url> 
     </repository>
   </distributionManagement>
   
